<resources>
    <string name="app_name">Chartered4</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="internet_msg">It seems like your device is not connected to internet.</string>
    <string name="version">Version %1$s</string>
    <string name="logout">Logout</string>
    <!--    <string name="login">Login</string>-->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="exit">Repeat this action to exit app</string>

    <string name="hintEmail">Email ID</string>
    <string name="hintPassword">Password</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintPhone">Phone</string>

    <string name="errPasswordRequired">Enter password</string>
    <string name="errPasswordLength">Password too short, enter minimum 8 characters!</string>
    <string name="errPhoneRequired">Enter phone</string>
    <string name="errEmailRequired">Enter email id</string>
    <string name="errEmailInValid">Enter valid email id</string>
    <string name="errFirstName">Enter first name</string>
    <string name="errLastName">Enter last name</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="lets_start">Let\'s Get Started</string>
    <string name="suit_up">Suit up</string>
    <string name="search">Search</string>
    <string name="schedule">Schedule</string>
    <string name="i_want_to_list_my_watercraft">I want to list my watercraft.</string>
    <string name="accept">Accept</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="remember_me">Remember Me</string>
    <string name="agree_terms_condition">Please agree to Terms &amp; Conditions</string>
    <string name="agree_i_want_to_list_my_watercraft">Please click to I want to list my watercraft</string>

    <string name="transitionAppLogo">Transition App Logo</string>
    <string name="home">Home</string>
    <string name="inquiries">Inquiries</string>
    <string name="bookings">Bookings</string>
    <string name="listings">Listings</string>
    <string name="add_listing">Add Listing</string>
    <string name="basicInformation">Basic Information</string>
    <string name="photosAndDescription">Photos &amp; Description</string>
    <string name="amenitiesAndEquipment">Amenities &amp; Equipment</string>
    <string name="ratesAndOffers">Rates &amp; Offers</string>
    <string-array name="arrSteps">
        <item>Basic Information</item>
        <item>Photos &amp; Description</item>
        <item>Amenities &amp; Equipment</item>
        <item>Rates &amp; Offers</item>
    </string-array>
    <string name="listingTitle">Listing Title</string>
    <string name="listingTitleMessage">Be sure to include the model, length, and location of the vessel in your title.</string>
    <string name="listingType">Listing Type</string>
    <string name="listingTypeMessage">Select up to 3 that apply.</string>
    <string name="locationOfVessel">Location of Vessel</string>
    <string name="capacity">Capacity</string>
    <string name="operatorIncluded">Operator Included</string>
    <string name="uploadPhotos">Upload Photos</string>
    <string name="errUploadPhotos">Select photos</string>
    <string name="uploadPhotosMaxMessage">Can upload up to 10 photos</string>
    <string name="uploadPhotosMessage">(Limit 10 Photos)</string>
    <string name="description">Description</string>
    <string name="descriptionHint">Tell us more relevant details about your vessel and suggest any itinerary activities!</string>
    <string name="minimumHours">Minimum Hours</string>
    <string name="fixedRatePerHour">Fixed Rate Per Hour</string>
    <string name="continueStr">Continue</string>
    <string name="stepOne">Step 1</string>
    <string name="stepTwo">Step 2</string>
    <string name="stepThree">Step 3</string>
    <string name="submit">Submit</string>
    <string name="welcomeBack">Welcome Back,</string>
    <string name="homeMessage">Track and manage your inquiries, bookings and customers.</string>
    <string name="visitors">Visitors</string>
    <string name="ratings">Ratings</string>
    <string name="newInquiries">New Inquiries</string>

    <string-array name="arrListingType">
        <!--<item>Select Listing Type</item>-->
        <item>Yacht/Motor</item>
        <item>Jet-Skis</item>
        <item>Kayaks/Paddles</item>
        <item>Fishing</item>
        <item>Sail</item>
        <item>Pontoons/House</item>
        <item>Lessons</item>
    </string-array>

    <string-array name="arrOperatorIncluded">
       <!-- <item>Select Operator Included</item>-->
        <item>Yes</item>
        <item>No</item>
        <item>I’m Flexible!</item>
    </string-array>

    <string name="errListingTitle">Enter listing title</string>
    <string name="errListingType">Select listing type</string>
    <string name="errLocationOfVessel">Enter location of vessel</string>
    <string name="errCapacity">Enter capacity</string>
    <string name="errOperatorIncluded">Select operator included</string>
    <string name="setDailyHourlyRate">Set Daily Hourly Rate</string>
    <string name="setSpecialOffer">Set Special Offer</string>
    <string name="sundayHourlyRate">Sunday Hourly Rate</string>
    <string name="mondayHourlyRate">Monday Hourly Rate</string>
    <string name="tuesdayHourlyRate">Tuesday Hourly Rate</string>
    <string name="wednesdayHourlyRate">Wednesday Hourly Rate</string>
    <string name="thursdayHourlyRate">Thursday Hourly Rate</string>
    <string name="fridayHourlyRate">Friday Hourly Rate</string>
    <string name="saturdayHourlyRate">Saturday Hourly Rate</string>
    <string name="hours">Hours</string>
    <string name="rate">Rate</string>
    <string name="discountPercentage">Discount Percentage</string>
    <string name="optional">(Optional)</string>

    <string name="yes_grant_permission">Yes, Grant permission</string>
    <string name="permission_msg_never_checked">You have denied some permissions. Allow permissions from app settings.</string>
    <string name="permission_msg">DB Sales app needs permission to use some features.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="no">No</string>
    <string name="choose_image">Choose Image</string>
    <string name="from_camera">Camera</string>
    <string name="pick_from_gallery">Device</string>
    <string name="newStr">New</string>
    <string name="existing">Existing</string>
    <string name="view_more">View More</string>
    <string name="expires_on">Expires on</string>
    <string name="adjust_offer">Adjust Offer</string>
    <string name="pick_up_date">Pick Up Date</string>
    <string name="pick_up_time">Pick Up Time</string>
    <string name="drop_off_date">Drop Off Date</string>
    <string name="drop_off_time">Drop Off Time</string>
    <string name="offer_amount">Offer Amount</string>
    <string name="message">Message</string>
    <string name="send_adjusted_offer">Send Adjusted Offer</string>
</resources>