<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutFirstName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintFirstName"
        app:boxBackgroundColor="@color/bgEdt"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/text_input_selector"
        app:boxStrokeWidth="1dp"
        app:startIconTint="@color/icon_toggle_color"
        app:startIconDrawable="@drawable/ic_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="50"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutLastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintLastName"
        app:boxBackgroundColor="@color/bgEdt"
        app:boxCornerRadiusBottomEnd="8dp"
        android:layout_marginTop="12dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/text_input_selector"
        app:boxStrokeWidth="1dp"
        app:startIconTint="@color/icon_toggle_color"
        app:startIconDrawable="@drawable/ic_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLength="50"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEmail"
        app:boxBackgroundColor="@color/bgEdt"
        android:layout_marginTop="12dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/text_input_selector"
        app:boxStrokeWidth="1dp"
        app:startIconTint="@color/icon_toggle_color"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPhone"
        app:boxBackgroundColor="@color/bgEdt"
        android:layout_marginTop="12dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/text_input_selector"
        app:boxStrokeWidth="1dp"
        app:startIconTint="@color/icon_toggle_color"
        app:startIconDrawable="@drawable/ic_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hintPassword"
        app:boxBackgroundColor="@color/bgEdt"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/text_input_selector"
        app:boxStrokeWidth="1dp"
        app:startIconTint="@color/icon_toggle_color"
        app:startIconDrawable="@drawable/ic_password"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/password_toggle"
        app:endIconTint="@color/password_toggle_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbListWatercraft"
        android:button="@drawable/cb_selector"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:buttonTint="@color/password_toggle_color"
        android:layout_marginTop="24dp"
        android:textColor="@color/secondaryText"
        android:textSize="14sp"
        android:text="@string/i_want_to_list_my_watercraft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:gravity="center|start"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbAgreeTermsConditions"
            android:button="@drawable/cb_selector"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:buttonTint="@color/password_toggle_color"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:textColor="@color/secondaryText"
            android:textSize="14sp"
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:onClick="openTermsConditions"
            android:text="@string/terms_conditions"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/FontPath.Medium"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="8dp"
        app:rippleColor="@color/colorPrimaryDark" />

</LinearLayout>