<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEmail"
        app:boxBackgroundColor="@color/bgEdt"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/text_input_selector"
        app:startIconTint="@color/icon_toggle_color"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hintPassword"
        app:boxBackgroundColor="@color/bgEdt"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/text_input_selector"
        app:startIconTint="@color/icon_toggle_color"
        app:startIconDrawable="@drawable/ic_password"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/password_toggle"
        app:endIconTint="@color/password_toggle_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbRemember"
            android:button="@drawable/cb_selector"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:buttonTint="@color/password_toggle_color"
            android:textColor="@color/secondaryText"
            android:textSize="12sp"
            android:text="@string/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/forgot_password"
            android:textAppearance="@style/FontPath.Medium"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="6dp"
        android:includeFontPadding="false"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="8dp"
        app:rippleColor="@color/colorPrimaryDark" />

</LinearLayout>