<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|top"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uploadPhotos"
                    android:textAppearance="@style/FontPath.Medium"
                    android:textColor="@color/primaryText"
                    android:textSize="14sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardMain"
                    android:layout_width="match_parent"
                    android:layout_height="158dp"
                    android:layout_marginTop="6dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="false"
                    app:strokeColor="@color/borderEdt"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_upload" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:text="@string/uploadPhotos"
                            android:textAppearance="@style/FontPath.Medium"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uploadPhotosMessage"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:gravity="center|start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textAppearance="@style/FontPath.Medium"
                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optional"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/secondaryText"
                        android:textSize="12sp" />

                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutDescription"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:hint="@string/description"
                    app:boxBackgroundColor="@color/bgEdt"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/text_input_selector"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/descriptionHint"
                        android:imeOptions="actionDone"
                        android:inputType="textMultiLine"
                        android:maxLength="350"
                        android:minLines="15"
                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPrevious"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:text="@string/stepOne"
                app:icon="@drawable/ic_back"
                app:iconTint="@color/colorPrimary"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                app:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                app:rippleColor="@color/colorPrimaryDark"
                app:strokeColor="@color/appDivider"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/continueStr"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="8dp"
                app:rippleColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>
