<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".IntroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:transitionName="@string/transitionAppLogo"
                android:layout_width="87dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_chartered4_logo"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.3"
                    android:text="@string/search"
                    android:textAllCaps="true"
                    android:textAppearance="@style/FontPath.Medium"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="4dp"
                    android:layout_height="4dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/indicatorUnselected"
                    android:background="@drawable/ic_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.3"
                    android:text="@string/schedule"
                    android:textAllCaps="true"
                    android:textAppearance="@style/FontPath.Medium"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="4dp"
                    android:layout_height="4dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/indicatorUnselected"
                    android:background="@drawable/ic_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.3"
                    android:text="@string/suit_up"
                    android:textAllCaps="true"
                    android:textAppearance="@style/FontPath.Medium"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />

            </LinearLayout>

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dotsIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:dotsColor="@color/indicatorUnselected"
                app:dotsCornerRadius="5dp"
                app:dotsSize="6dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                app:dotsSpacing="4dp"
                app:dotsWidthFactor="3"
                app:progressMode="false"
                app:selectedDotColor="@color/colorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:text="@string/lets_start"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="5dp"
                app:rippleColor="@color/colorPrimaryRipple" />

        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
